<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg2"
    android:padding="16dp">

    <TextView
        android:layout_width="214dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/hello_admin"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_insert_product"
        android:layout_width="201dp"
        android:layout_height="89dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#A47442"
        android:text="@string/insert_product" />

    <Button
        android:id="@+id/btn_view_product"
        android:layout_width="200dp"
        android:layout_height="89dp"
        android:backgroundTint="#B3305C"
        android:text="@string/view_product" />

</LinearLayout>