<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/bg1"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="username"
        android:drawableLeft="@drawable/baseline_person"
        android:drawablePadding="10dp"
        android:background="@android:drawable/editbox_background"
        android:textColorHint="@color/black"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="12dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_register_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="email"
        android:drawableLeft="@drawable/baseline_email"
        android:drawablePadding="10dp"
        android:background="@android:drawable/editbox_background"
        android:textColorHint="@color/black"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="password"
        android:drawableLeft="@drawable/baseline_security"
        android:drawablePadding="10dp"
        android:background="@android:drawable/editbox_background"
        android:textColorHint="@color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_register_Confirm_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="confirm_password"
        android:drawableLeft="@drawable/baseline_security"
        android:drawablePadding="10dp"
        android:background="@android:drawable/editbox_background"
        android:textColorHint="@color/black"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_register_Contact_Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="telephone"
        android:drawableLeft="@drawable/baseline_contact_phone"
        android:drawablePadding="10dp"
        android:background="@android:drawable/editbox_background"
        android:textColorHint="@color/black"
        android:hint="@string/contact_no"
        android:inputType="phone"
        android:padding="12dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            android:padding="12dp"
            android:backgroundTint="#E91E63"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Login"
            android:padding="12dp"
            android:backgroundTint="#D38919"
            android:textColor="@android:color/white"
            android:layout_marginStart="8dp" />

    </LinearLayout>

</LinearLayout>