<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/bg1"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="username"
        android:drawableStart="@drawable/baseline_person"
        android:drawablePadding="10dp"
        android:background="@android:drawable/editbox_background"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="12dp"
        android:textStyle="bold"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="password"
        android:background="@android:drawable/editbox_background"
        android:drawableStart="@drawable/baseline_security"
        android:drawablePadding="10dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textStyle="bold"
        tools:ignore="VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="#E91E63"
            android:padding="12dp"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="#D38919"
            android:padding="12dp"
            android:text="@string/Login"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>