<!-- list_item_product.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@drawable/item_background"
    android:elevation="4dp"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/image_view_product"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/upload_icon"
        android:background="@drawable/image_background"
        android:elevation="2dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/text_view_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/product_price_color"
            android:layout_marginBottom="8dp"
            android:text="@string/product_price" />

        <TextView
            android:id="@+id/text_view_product_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/product_quantity_color"
            android:text="@string/product_quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/button_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#E91E63"
                android:padding="12dp"
                android:text="@string/cart"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="#D38919"
                android:padding="12dp"
                android:text="@string/order"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>